beginning of definition activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
   <string name="nav_header_subtitle">android.studio@android.com</string>
   <string name="nav_header_desc">Navigation header</string>
   <string name="action_settings">Settings</string>
+  <string name="alt_readings">Alternate Readings</string>
+  <string name="alt_kanji">Alternate Kanji</string>
 </resources>
