--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
   <string name="action_settings">Settings</string>
   <string name="alt_readings">Alternate Readings</string>
   <string name="alt_kanji">Alternate Kanji</string>
+  <string name="see_also_format">See also: %s</string>
+  <string name="list_of_words_delimiter">,\u0020</string>
 </resources>
