--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,5 +9,94 @@
   <string name="alt_readings">Alternate Readings</string>
   <string name="alt_kanji">Alternate Kanji</string>
   <string name="see_also_format">See also: %s</string>
+  <string name="applies_to">Applies to: %s</string>
   <string name="list_of_words_delimiter">,\u0020</string>
+
+  <!-- parts of speech -->
+  <!-- http://www.edrdg.org/jmdictdb/cgi-bin/edhelp.py?svc=jmdict&sid=#kw_pos -->
+  <string name="adj_f">Adjective</string>
+  <string name="adj_i">Adjective</string>
+  <string name="adj_ix">Adjective</string>
+  <string name="adj_ku">Adjective</string>
+  <string name="adj_na">Adjective</string>
+  <string name="adj_nari">Adjective</string>
+  <string name="adj_no">Adjective</string>
+  <string name="adj_pn">Pre-Noun Adjectival</string>
+  <string name="adj_shiku">Adjective</string>
+  <string name="adj_t">Adjective</string>
+  <string name="adv_to">Adverb</string>
+  <string name="adv">Adverb</string>
+  <string name="aux_adj">Auxiliary Adjective</string>
+  <string name="aux_v">Auxiliary Verb</string>
+  <string name="aux">Auxiliary</string>
+  <string name="conj">Conjunction</string>
+  <string name="cop_da">Copula</string>
+  <string name="ctr">Counter</string>
+  <string name="exp">Expression</string>
+  <string name="intj">Interjection</string>
+  <string name="n_adv">Adverbial Noun</string>
+  <string name="n_pr">Proper Noun</string>
+  <string name="n_pref">Noun (Prefix)</string>
+  <string name="n_suf">Noun (Suffix)</string>
+  <string name="n_t">Noun (Temporal)</string>
+  <string name="n">Noun</string>
+  <string name="num">Numeric</string>
+  <string name="pn">Pronoun</string>
+  <string name="pref">Prefix</string>
+  <string name="prt">Particle</string>
+  <string name="suf">Suffix</string>
+  <string name="unc">Unclassified</string>
+  <string name="v1_s">Verb</string>
+  <string name="v1">Verb</string>
+  <string name="v2a_s">Verb</string>
+  <string name="v2b_k">Verb</string>
+  <string name="v2d_s">Verb</string>
+  <string name="v2g_k">Verb</string>
+  <string name="v2g_s">Verb</string>
+  <string name="v2h_k">Verb</string>
+  <string name="v2h_s">Verb</string>
+  <string name="v2k_k">Verb</string>
+  <string name="v2k_s">Verb</string>
+  <string name="v2m_s">Verb</string>
+  <string name="v2n_s">Verb</string>
+  <string name="v2r_k">Verb</string>
+  <string name="v2r_s">Verb</string>
+  <string name="v2s_s">Verb</string>
+  <string name="v2t_k">Verb</string>
+  <string name="v2t_s">Verb</string>
+  <string name="v2w_s">Verb</string>
+  <string name="v2y_k">Verb</string>
+  <string name="v2y_s">Verb</string>
+  <string name="v2z_s">Verb</string>
+  <string name="v4b">Verb</string>
+  <string name="v4g">Verb</string>
+  <string name="v4h">Verb</string>
+  <string name="v4k">Verb</string>
+  <string name="v4m">Verb</string>
+  <string name="v4r">Verb</string>
+  <string name="v4s">Verb</string>
+  <string name="v4t">Verb</string>
+  <string name="v5aru">Verb</string>
+  <string name="v5b">Verb</string>
+  <string name="v5g">Verb</string>
+  <string name="v5k_s">Verb</string>
+  <string name="v5k">Verb</string>
+  <string name="v5m">Verb</string>
+  <string name="v5n">Verb</string>
+  <string name="v5r_i">Verb</string>
+  <string name="v5r">Verb</string>
+  <string name="v5s">Verb</string>
+  <string name="v5t">Verb</string>
+  <string name="v5u_s">Verb</string>
+  <string name="v5u">Verb</string>
+  <string name="vi">Verb (Intransitive)</string>
+  <string name="vk">Verb</string>
+  <string name="vn">Verb</string>
+  <string name="vr">Verb</string>
+  <string name="vs_c">Verb</string>
+  <string name="vs_i">Verb</string>
+  <string name="vs_s">Verb</string>
+  <string name="vs">Verb</string>
+  <string name="vt">Verb (Transitive)</string>
+  <string name="vz">Verb</string>
 </resources>
