--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,12 +5,13 @@
   <string name="nav_header_title">Android Studio</string>
   <string name="nav_header_subtitle">android.studio@android.com</string>
   <string name="nav_header_desc">Navigation header</string>
-  <string name="action_settings">Settings</string>
+  <string name="action_search">Search</string>
   <string name="alt_readings">Alternate Readings</string>
   <string name="alt_kanji">Alternate Kanji</string>
   <string name="see_also_format">See also: %s</string>
   <string name="applies_to">Applies to: %s</string>
   <string name="list_of_words_delimiter">,\u0020</string>
+  <string name="search_hint">Search the dictionary</string>
 
   <!-- parts of speech -->
   <!-- http://www.edrdg.org/jmdictdb/cgi-bin/edhelp.py?svc=jmdict&sid=#kw_pos -->
