--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
 
   <!-- Menu -->
   <string name="search">Search</string>
+  <string name="search_results">Search Results</string>
   <string name="browse">Browse</string>
   <string name="favorites">Favorites</string>
   <string name="jlpt">JLPT Lists</string>
