beginnings of a widget

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,12 +18,18 @@
   <string name="search_results">Search Results</string>
   <string name="browse">Browse</string>
   <string name="favorites">Favorites</string>
-  <string name="jlpt">JLPT Lists</string>
-  <string name="jlpt_n1">N1 Vocabulary</string>
-  <string name="jlpt_n2">N2 Vocabulary</string>
-  <string name="jlpt_n3">N3 Vocabulary</string>
-  <string name="jlpt_n4">N4 Vocabulary</string>
-  <string name="jlpt_n5">N5 Vocabulary</string>
+  <string name="jlpt">JLPT Vocabulary Lists</string>
+  <string name="jlpt_n1">N1</string>
+  <string name="jlpt_n2">N2</string>
+  <string name="jlpt_n3">N3</string>
+  <string name="jlpt_n4">N4</string>
+  <string name="jlpt_n5">N5</string>
+
+  <!-- Widget -->
+  <string name="appwidget_text">EXAMPLE</string>
+  <string name="configure">Select a JLPT Level</string>
+  <string name="widget_explanation">The widget will display a random word from your selected JLPT level every day.</string>
+  <string name="add_widget">Add widget</string>
 
   <!-- parts of speech -->
   <!-- http://www.edrdg.org/jmdictdb/cgi-bin/edhelp.py?svc=jmdict&sid=#kw_pos -->
