--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -32,6 +32,14 @@
   <string name="widget_explanation">The widget will display a random word from your selected JLPT level every 24 hours.</string>
   <string name="add_widget">Add widget</string>
 
+  <!-- CSV export -->
+  <string name="export_instructions">You can export your favorites or the JLPT lists to a CSV for
+    importing into other programs, like Anki SRS. The format is expression;meaning;reading. Please
+    make sure to allow HTML. This feature requires permission to write to your external storage.</string>
+  <string name="export_yes">Proceed</string>
+  <string name="export_no">Cancel</string>
+  <string name="permission_denied">External Storage Write Permission Denied: You will not be able to use the Export feature.</string>
+
   <!-- parts of speech -->
   <!-- http://www.edrdg.org/jmdictdb/cgi-bin/edhelp.py?svc=jmdict&sid=#kw_pos -->
   <string name="adj_f">Adjective</string>
