--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,6 +30,7 @@
   <string name="jlpt_n4">N4</string>
   <string name="jlpt_n5">N5</string>
   <string name="export">Export to CSV</string>
+  <string name="about">About</string>
 
   <!-- Widget -->
   <string name="word_of_the_day">Word of the Day</string>
@@ -48,6 +49,14 @@
   <string name="csv_successful">CSV export successful!</string>
   <string name="csv_failed">CSV export failed.</string>
   <string name="share_csv">Share Exported CSV</string>
+
+  <string name="about_app">Jisho Tomo was created as part of the Android Developer Nanodegree program by Udacity and Google. The
+    code is open source and available on <a href="https://github.com/sienatime/jishotomo">GitHub</a>.\n\nThis
+    app uses the <a href="http://www.edrdg.org/jmdict/j_jmdict.html">JMdict dictionary files</a>.
+    These files are the property of the <a href="http://www.edrdg.org/">Electronic Dictionary Research and Development Group</a>,
+    and are used in conformance with the Group\'s <a href="http://www.edrdg.org/edrdg/licence.html">licence</a>.\n\nJLPT
+    data is from <a href="http://www.tanos.co.uk/jlpt/">Jonathan Waller\'s site</a>, which is provided under a Creative Commons license.
+  </string>
 
   <!-- parts of speech -->
   <!-- http://www.edrdg.org/jmdictdb/cgi-bin/edhelp.py?svc=jmdict&sid=#kw_pos -->
