refactor dialog to be more reusable

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -43,7 +43,7 @@
     importing into other programs, like Anki SRS. The format is expression;meaning;reading. Please
     make sure to allow HTML when you import.</string>
   <string name="export_yes">Proceed</string>
-  <string name="export_no">Cancel</string>
+  <string name="cancel">Cancel</string>
   <string name="permission_denied">External Storage Write Permission Denied: You will not be able to use the Export feature.</string>
   <string name="no_external_storage">No external storage detected. You will not be able to use the Export feature.</string>
   <string name="csv_successful">CSV export successful!</string>
